{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 78,
  "lineage": "8636cf85-a875-76c2-197c-430a397d00f0",
  "resources": [
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b45ea87bb43a849f",
            "domain": "vpc",
            "id": "eipalloc-0c28763a9f0c6e4c0",
            "network_interface": "eni-096874993833d19a9",
            "private_dns": "ip-10-0-101-16.eu-west-1.compute.internal",
            "private_ip": "10.0.101.16",
            "public_dns": "ec2-63-35-3-191.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.35.3.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a7c3fa2ebbe09901",
            "domain": "vpc",
            "id": "eipalloc-03a4bebfc4a1d5bb9",
            "network_interface": "eni-0e34aa3e568eedebb",
            "private_dns": "ip-10-0-102-37.eu-west-1.compute.internal",
            "private_ip": "10.0.102.37",
            "public_dns": "ec2-18-200-129-41.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.129.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f0adffd02ae7e0b9",
            "domain": "vpc",
            "id": "eipalloc-03833a2d56401f4c1",
            "network_interface": "eni-0c44cc9510994c402",
            "private_dns": "ip-10-0-103-34.eu-west-1.compute.internal",
            "private_ip": "10.0.103.34",
            "public_dns": "ec2-34-246-226-91.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.246.226.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-05f26895f76b66468",
            "owner_id": "059773386095",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c28763a9f0c6e4c0",
            "id": "nat-03af7a2972473c59f",
            "network_interface_id": "eni-096874993833d19a9",
            "private_ip": "10.0.101.16",
            "public_ip": "63.35.3.191",
            "subnet_id": "subnet-0d6bd93cdb1ca5d59",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-eu-west-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_eip.nat",
            "module.my-eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a4bebfc4a1d5bb9",
            "id": "nat-03af904bf5a3221d7",
            "network_interface_id": "eni-0e34aa3e568eedebb",
            "private_ip": "10.0.102.37",
            "public_ip": "18.200.129.41",
            "subnet_id": "subnet-0868b3c583f6f7b66",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-eu-west-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_eip.nat",
            "module.my-eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03833a2d56401f4c1",
            "id": "nat-0727c3b6a36d77f97",
            "network_interface_id": "eni-0c44cc9510994c402",
            "private_ip": "10.0.103.34",
            "public_ip": "34.246.226.91",
            "subnet_id": "subnet-0e6b887cecdec91f0",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-eu-west-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_eip.nat",
            "module.my-eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-054ec65e303d83b1c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-03af7a2972473c59f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054ec65e303d83b1c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_eip.nat",
            "module.my-eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_nat_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_route_table.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0370350cbcee5ca991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-03af904bf5a3221d7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0370350cbcee5ca99",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_eip.nat",
            "module.my-eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_nat_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_route_table.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09ca20f683c52287f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0727c3b6a36d77f97",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ca20f683c52287f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_eip.nat",
            "module.my-eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_nat_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_route_table.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05f26895f76b66468",
            "id": "r-rtb-0076c6fc0287a6d701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0076c6fc0287a6d70",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_internet_gateway.this",
            "module.my-eks-cluster.module.vpc.aws_route_table.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-054ec65e303d83b1c",
            "owner_id": "059773386095",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03af7a2972473c59f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0370350cbcee5ca99",
            "owner_id": "059773386095",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03af904bf5a3221d7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09ca20f683c52287f",
            "owner_id": "059773386095",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0727c3b6a36d77f97",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0076c6fc0287a6d70",
            "owner_id": "059773386095",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f26895f76b66468",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7f50cef4ea342d8",
            "route_table_id": "rtb-054ec65e303d83b1c",
            "subnet_id": "subnet-074b17cbb32c2b8df"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_route_table.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.private",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00210ca1cdb822085",
            "route_table_id": "rtb-0370350cbcee5ca99",
            "subnet_id": "subnet-0c98901de87c58f30"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_route_table.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.private",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed86e18111d87784",
            "route_table_id": "rtb-09ca20f683c52287f",
            "subnet_id": "subnet-052acde88cae2e837"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_route_table.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.private",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0785d15cb4e271866",
            "route_table_id": "rtb-0076c6fc0287a6d70",
            "subnet_id": "subnet-0d6bd93cdb1ca5d59"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_route_table.public",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4705e8e233e8883",
            "route_table_id": "rtb-0076c6fc0287a6d70",
            "subnet_id": "subnet-0868b3c583f6f7b66"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_route_table.public",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0256e4cd5ed13c07e",
            "route_table_id": "rtb-0076c6fc0287a6d70",
            "subnet_id": "subnet-0e6b887cecdec91f0"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_route_table.public",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:059773386095:security-group/sg-025d830711c8b0bf5",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025d830711c8b0bf5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00dc78aaf563b9be3"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-eks-cluster20200103171103290800000004",
            "name_prefix": "dev-eks-cluster",
            "owner_id": "059773386095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-eks-cluster-eks_cluster_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:059773386095:security-group/sg-00dc78aaf563b9be3",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dc78aaf563b9be3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025d830711c8b0bf5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025d830711c8b0bf5"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "dev-eks-cluster20200103172252817000000006",
            "name_prefix": "dev-eks-cluster",
            "owner_id": "059773386095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-eks-cluster-eks_worker_sg",
              "Terraform": "true",
              "kubernetes.io/cluster/dev-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.my-eks-cluster.module.eks-cluster.aws_eks_cluster.this",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.module.vpc.aws_subnet.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-76795208",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-025d830711c8b0bf5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-301433788",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-025d830711c8b0bf5",
            "self": false,
            "source_security_group_id": "sg-00dc78aaf563b9be3",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-eks-cluster.module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.my-eks-cluster.module.eks-cluster.aws_eks_cluster.this",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.workers",
            "module.my-eks-cluster.module.vpc.aws_subnet.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-4109541837",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00dc78aaf563b9be3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-eks-cluster.module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.my-eks-cluster.module.eks-cluster.aws_eks_cluster.this",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.workers",
            "module.my-eks-cluster.module.vpc.aws_subnet.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2499008364",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00dc78aaf563b9be3",
            "self": false,
            "source_security_group_id": "sg-025d830711c8b0bf5",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-eks-cluster.module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.my-eks-cluster.module.eks-cluster.aws_eks_cluster.this",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.workers",
            "module.my-eks-cluster.module.vpc.aws_subnet.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3431816472",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00dc78aaf563b9be3",
            "self": false,
            "source_security_group_id": "sg-025d830711c8b0bf5",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-eks-cluster.module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.my-eks-cluster.module.eks-cluster.aws_eks_cluster.this",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.workers",
            "module.my-eks-cluster.module.vpc.aws_subnet.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-eks-cluster.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1536339866",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00dc78aaf563b9be3",
            "self": false,
            "source_security_group_id": "sg-00dc78aaf563b9be3",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-eks-cluster.module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.my-eks-cluster.module.eks-cluster.aws_eks_cluster.this",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.module.eks-cluster.aws_security_group.workers",
            "module.my-eks-cluster.module.vpc.aws_subnet.private",
            "module.my-eks-cluster.module.vpc.aws_subnet.public",
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:059773386095:subnet/subnet-074b17cbb32c2b8df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-074b17cbb32c2b8df",
            "map_public_ip_on_launch": false,
            "owner_id": "059773386095",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-eu-west-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:059773386095:subnet/subnet-0c98901de87c58f30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c98901de87c58f30",
            "map_public_ip_on_launch": false,
            "owner_id": "059773386095",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-eu-west-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:059773386095:subnet/subnet-052acde88cae2e837",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-052acde88cae2e837",
            "map_public_ip_on_launch": false,
            "owner_id": "059773386095",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-eu-west-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:059773386095:subnet/subnet-0d6bd93cdb1ca5d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0d6bd93cdb1ca5d59",
            "map_public_ip_on_launch": true,
            "owner_id": "059773386095",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-eu-west-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:059773386095:subnet/subnet-0868b3c583f6f7b66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0868b3c583f6f7b66",
            "map_public_ip_on_launch": true,
            "owner_id": "059773386095",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-eu-west-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:059773386095:subnet/subnet-0e6b887cecdec91f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0e6b887cecdec91f0",
            "map_public_ip_on_launch": true,
            "owner_id": "059773386095",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-eu-west-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-069debd61967b28b7"
          },
          "dependencies": [
            "module.my-eks-cluster.module.vpc.aws_vpc.this",
            "module.my-eks-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:059773386095:vpc/vpc-069debd61967b28b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0067f9bc700961729",
            "default_route_table_id": "rtb-01b91ad5a9bbbbf17",
            "default_security_group_id": "sg-09ad4ef01a7f845a9",
            "dhcp_options_id": "dopt-6cc5890a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-069debd61967b28b7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01b91ad5a9bbbbf17",
            "owner_id": "059773386095",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.my-eks-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}